# moba-illumination

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in
config/: moba-illumination.conf  moba-illumination.service
src/: main.cpp  monitor.cpp  monitor.h  msghandler.cpp  msghandler.h
